--- a/picker/package.json
+++ b/picker/package.json
@@ -10,6 +10,7 @@
     "react": "^16.3.0-alpha.1",
     "react-native": "^0.54.0",
     "react-native-camera": "^1.0.1",
+    "react-native-firebase": "^3.3.1",
     "react-navigation": "^1.5.0",
     "react-transform-hmr": "^1.0.4",
     "tcomb-form-native": "^0.6.11"
