--- a/applicatif/package.json
+++ b/applicatif/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "create-react-class": "^15.6.3",
+    "materialize-css": "^0.100.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
