--- a/picker/android/app/build.gradle
+++ b/picker/android/app/build.gradle
@@ -148,9 +148,7 @@ dependencies {
     compile(project(':react-native-camera')) {
         exclude group: "com.google.android.gms"
     }
-    compile("com.google.android.gms:play-services-vision:11.0.4") {
-        force = true;
-    }
+    compile("com.google.android.gms:play-services-vision:11.0.4")
 }
 
 // Run this once to be able to run the application with BUCK
