--- a/picker/android/gradle.properties
+++ b/picker/android/gradle.properties
@@ -18,3 +18,10 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=../keystores/picker_key
+MYAPP_RELEASE_KEY_ALIAS=picker_key
+MYAPP_RELEASE_STORE_PASSWORD=Adrien13
+MYAPP_RELEASE_KEY_PASSWORD=Adrien13
+
+android.enableAapt2=false
